--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       color:var(--fg);
       background: var(--bg) center / cover no-repeat fixed;
       /* 🔁 Remplace cette URL par ton image de flyer */
-      background-image: url("./assets/flyer.jpg");
+      background-image: url("./Fly6122025.jpg");
       position:relative;
     }
     body::before{
