--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       --bg:#0a0a0a; --fg:#fff; --glass:rgba(0,0,0,.55);
       --accent:#e6e6e6; --radius:16px; --gap:clamp(12px, 4vw, 24px);
       --pad:clamp(10px, 3.5vw, 16px);
+      --btn-bg:#ff0040; --btn-bg-hover:#ff3366;
     }
     *{box-sizing:border-box}
     html,body{height:100%}
@@ -19,7 +20,6 @@
       margin:0; color:var(--fg);
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Arial, "Noto Sans";
       background: var(--bg) center/cover no-repeat fixed;
-      /* L’image est ajoutée par JS pour forcer un rafraîchissement (anti-cache) */
       padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
     }
     body::before{
@@ -94,8 +94,28 @@
       .birthday{ text-align:left; }
     }
 
+    /* Bouton Préventes */
+    .tickets{
+      margin: 1.8rem auto 0;
+    }
+    .tickets a{
+      display:inline-block;
+      padding:.9rem 1.6rem;
+      font-size: clamp(14px, 4vw, 18px);
+      font-weight:700;
+      color:#fff; text-decoration:none;
+      border-radius: 999px;
+      background: var(--btn-bg);
+      transition: background .3s, transform .2s;
+      box-shadow: 0 8px 20px rgba(255,0,64,.4);
+    }
+    .tickets a:hover{
+      background: var(--btn-bg-hover);
+      transform: scale(1.05);
+    }
+
     .location{
-      margin-top: 1.4rem; font-size: clamp(15px, 4.2vw, 20px); font-weight:600;
+      margin-top: 1.6rem; font-size: clamp(15px, 4.2vw, 20px); font-weight:600;
       background: var(--glass); padding:.8rem 1.1rem; border-radius: var(--radius);
       border:1px solid rgba(255,255,255,.12); box-shadow: 0 10px 30px rgba(0,0,0,.35); text-align:center;
     }
@@ -134,6 +154,11 @@
           <span class="birthday">Birthday David Lagon</span>
         </div>
       </section>
+
+      <!-- Bouton Préventes -->
+      <div class="tickets">
+        <a href="https://billetto.fr/e/equinox-reborn-billets-1640949" target="_blank" rel="noopener">🎟️ Accéder aux préventes</a>
+      </div>
 
       <p class="location">Lieu secret dévoilé au dernier moment sur cette page</p>
       <p class="footer">6 décembre 2025 — 22:00 → 06:00 (Europe/Paris)</p>
@@ -177,9 +202,9 @@
       }
     });
 
-    // === Image de fond avec anti-cache ===
+    // Image de fond avec anti-cache
     const flyer = "./Fly6122025.jpg";
-    const version = Date.now(); // timestamp unique
+    const version = Date.now();
     document.body.style.backgroundImage = `url("${flyer}?v=${version}")`;
   </script>
 </body>
