--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <div class="djs-content" id="lineup-content">
           <div class="dj-track">
             <div class="dj">LEELOO <span class="badge">(Hardcoholics)</span></div>
-            <div class="dj">INGLER <span class="badge">(Laurent Hô)</span></div>
+            <div class="dj">INGLER</div>
             <div class="dj">LA PESTE</div>
             <div class="dj">LE TALIUM</div>
             <div class="dj">SPEEDLOADER</div>
