--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       }
     });
 
-    // Image de fond avec anti-cache
+    // Image de fond avec anti-cache (Flyer V4)
     const flyer = "./Fly6122025_V4.jpg";
     const version = Date.now();
     document.body.style.backgroundImage = `url("${flyer}?v=${version}")`;
