--- a/index.html
+++ b/index.html
@@ -27,72 +27,42 @@
       background: radial-gradient(ellipse at center, rgba(0,0,0,.28), rgba(0,0,0,.78));
       pointer-events:none;
     }
-
     /* ✅ Sur smartphone, garder l’image entière */
     @media (max-width: 768px) {
-      body {
-        background: var(--bg) center/contain no-repeat fixed;
-      }
+      body { background: var(--bg) center/contain no-repeat fixed; }
     }
 
     .wrap{ min-height:100%; display:grid; place-items:center; padding: 6vh var(--gap); }
     main{ width:min(100%, 980px); text-align:center; }
-
-    .title{
-      margin:0 0 .75rem; text-transform:uppercase; letter-spacing:.06em; font-weight:800;
-      font-size: clamp(22px, 7vw, 44px); text-shadow: 0 6px 24px rgba(0,0,0,.6);
-    }
+    .title{ margin:0 0 .75rem; text-transform:uppercase; letter-spacing:.06em; font-weight:800;
+      font-size: clamp(22px, 7vw, 44px); text-shadow: 0 6px 24px rgba(0,0,0,.6); }
     .subtitle{ margin:0 0 1.5rem; opacity:.9; font-size: clamp(13px, 4vw, 18px); }
 
-    .countdown{
-      display:flex; gap: var(--gap); justify-content:center; flex-wrap:wrap;
-    }
-    .unit{
-      min-width: 42vw;
-      padding: var(--pad);
-      border-radius: var(--radius);
-      background: var(--glass); backdrop-filter: blur(6px);
-      border: 1px solid rgba(255,255,255,.12);
-      box-shadow: 0 10px 30px rgba(0,0,0,.35);
-    }
-    .num{
-      font-variant-numeric: tabular-nums; font-weight: 800; line-height:1;
-      font-size: clamp(34px, 12vw, 64px);
-    }
-    .label{
-      margin-top:.35rem; text-transform:uppercase; letter-spacing:.12em;
-      font-size: clamp(10px, 3.5vw, 12px); color: var(--accent); opacity:.95;
-    }
+    .countdown{ display:flex; gap: var(--gap); justify-content:center; flex-wrap:wrap; }
+    .unit{ min-width: 42vw; padding: var(--pad); border-radius: var(--radius); background: var(--glass);
+      backdrop-filter: blur(6px); border: 1px solid rgba(255,255,255,.12); box-shadow: 0 10px 30px rgba(0,0,0,.35); }
+    .num{ font-variant-numeric: tabular-nums; font-weight: 800; line-height:1; font-size: clamp(34px, 12vw, 64px); }
+    .label{ margin-top:.35rem; text-transform:uppercase; letter-spacing:.12em;
+      font-size: clamp(10px, 3.5vw, 12px); color: var(--accent); opacity:.95; }
 
-    .djs{
-      margin-top: 1.8rem; text-align:left;
-      border-radius: var(--radius); background: var(--glass);
-      border: 1px solid rgba(255,255,255,.12); box-shadow: 0 10px 30px rgba(0,0,0,.35);
-    }
-    .djs-header{
-      display:flex; align-items:center; justify-content:space-between; gap:.75rem;
-      padding:.8rem .9rem; border-bottom:1px solid rgba(255,255,255,.1);
-    }
+    .djs{ margin-top: 1.8rem; text-align:left; border-radius: var(--radius); background: var(--glass);
+      border: 1px solid rgba(255,255,255,.12); box-shadow: 0 10px 30px rgba(0,0,0,.35); }
+    .djs-header{ display:flex; align-items:center; justify-content:space-between; gap:.75rem;
+      padding:.8rem .9rem; border-bottom:1px solid rgba(255,255,255,.1); }
     .djs-title{ margin:0; text-transform:uppercase; letter-spacing:.08em; font-weight:800; font-size: clamp(13px, 4vw, 18px); }
     .toggle{ appearance:none; border:1px solid rgba(255,255,255,.2); background:transparent; color:var(--fg);
       padding:.45rem .8rem; border-radius:999px; font-size: 13px; cursor:pointer; }
-
     .djs-content{ display:block; }
     .djs[hidden-content="true"] .djs-content{ display:none; }
 
-    .dj-track{
-      display:flex; gap:.6rem; padding:.8rem .9rem 1rem; overflow-x:auto;
-      scroll-snap-type:x proximity; -webkit-overflow-scrolling:touch; overscroll-behavior-x:contain;
-    }
-    .dj{
-      scroll-snap-align:start; white-space:nowrap;
-      padding:.6rem .8rem; border:1px solid rgba(255,255,255,.18);
-      border-radius:12px; background:rgba(0,0,0,.35);
-      box-shadow: inset 0 6px 18px rgba(0,0,0,.25), 0 8px 20px rgba(0,0,0,.25);
-      font-size: clamp(13px, 3.7vw, 16px);
-    }
+    .dj-track{ display:flex; gap:.6rem; padding:.8rem .9rem 1rem; overflow-x:auto;
+      scroll-snap-type:x proximity; -webkit-overflow-scrolling:touch; overscroll-behavior-x:contain; }
+    .dj{ scroll-snap-align:start; white-space:nowrap; padding:.6rem .8rem; border:1px solid rgba(255,255,255,.18);
+      border-radius:12px; background:rgba(0,0,0,.35); box-shadow: inset 0 6px 18px rgba(0,0,0,.25), 0 8px 20px rgba(0,0,0,.25);
+      font-size: clamp(13px, 3.7vw, 16px); }
     .badge{ opacity:.85; font-size:.92em; margin-left:.5ch; }
-    .birthday{ display:block; margin:.25rem .9rem 1rem; font-style:italic; opacity:.92; text-align:center; font-size: clamp(12px, 3.6vw, 16px); }
+    .birthday{ display:block; margin:.25rem .9rem 1rem; font-style:italic; opacity:.92; text-align:center;
+      font-size: clamp(12px, 3.6vw, 16px); }
 
     @media (min-width:720px){
       .unit{ min-width: 160px; }
@@ -101,37 +71,19 @@
       .birthday{ text-align:left; }
     }
 
-    /* Bouton Préventes */
-    .tickets{
-      margin: 1.8rem auto 0;
-    }
-    .tickets a{
-      display:inline-block;
-      padding:.9rem 1.6rem;
-      font-size: clamp(14px, 4vw, 18px);
-      font-weight:700;
-      color:#fff; text-decoration:none;
-      border-radius: 999px;
-      background: var(--btn-bg);
-      transition: background .3s, transform .2s;
-      box-shadow: 0 8px 20px rgba(255,0,64,.4);
-    }
-    .tickets a:hover{
-      background: var(--btn-bg-hover);
-      transform: scale(1.05);
-    }
+    .tickets{ margin: 1.8rem auto 0; }
+    .tickets a{ display:inline-block; padding:.9rem 1.6rem; font-size: clamp(14px, 4vw, 18px);
+      font-weight:700; color:#fff; text-decoration:none; border-radius: 999px; background: var(--btn-bg);
+      transition: background .3s, transform .2s; box-shadow: 0 8px 20px rgba(255,0,64,.4); }
+    .tickets a:hover{ background: var(--btn-bg-hover); transform: scale(1.05); }
 
-    .location{
-      margin-top: 1.6rem; font-size: clamp(15px, 4.2vw, 20px); font-weight:600;
-      background: var(--glass); padding:.8rem 1.1rem; border-radius: var(--radius);
-      border:1px solid rgba(255,255,255,.12); box-shadow: 0 10px 30px rgba(0,0,0,.35); text-align:center;
-    }
+    .location{ margin-top: 1.6rem; font-size: clamp(15px, 4.2vw, 20px); font-weight:600; background: var(--glass);
+      padding:.8rem 1.1rem; border-radius: var(--radius); border:1px solid rgba(255,255,255,.12);
+      box-shadow: 0 10px 30px rgba(0,0,0,.35); text-align:center; }
     .footer{ margin-top: 1.2rem; font-size: 12px; opacity:.85; }
-    .started{
-      font-size: clamp(24px, 8vw, 40px); font-weight:800; padding:.55rem 1rem;
-      border-radius: var(--radius); background: var(--glass);
-      display:inline-block; border: 1px solid rgba(255,255,255,.12); box-shadow: 0 10px 30px rgba(0,0,0,.35);
-    }
+    .started{ font-size: clamp(24px, 8vw, 40px); font-weight:800; padding:.55rem 1rem; border-radius: var(--radius);
+      background: var(--glass); display:inline-block; border: 1px solid rgba(255,255,255,.12);
+      box-shadow: 0 10px 30px rgba(0,0,0,.35); }
   </style>
 </head>
 <body>
@@ -162,7 +114,6 @@
         </div>
       </section>
 
-      <!-- Bouton Préventes -->
       <div class="tickets">
         <a href="https://billetto.fr/e/equinox-reborn-billets-1640949" target="_blank" rel="noopener">🎟️ Accéder aux préventes</a>
       </div>
@@ -214,22 +165,23 @@
     const version = Date.now();
     document.body.style.backgroundImage = `url("${flyer}?v=${version}")`;
 
-    // ✅ Compteur invisible (visiteur unique avec countapi.xyz)
-    const COUNTER_NS  = 'equinox-reborn.github.io';
-    const COUNTER_KEY = 'pageviews';
-    const firstVisit = !localStorage.getItem('er_visit');
-    if (firstVisit) {
-      localStorage.setItem('er_visit', '1');
-      fetch(`https://countapi.xyz/hit/${COUNTER_NS}/${COUNTER_KEY}`, {cache:'no-store'})
-        .then(r => r.json())
-        .then(d => console.log('Visiteurs uniques:', d.value))
-        .catch(()=>{});
-    } else {
-      fetch(`https://countapi.xyz/get/${COUNTER_NS}/${COUNTER_KEY}`, {cache:'no-store'})
-        .then(r => r.json())
-        .then(d => console.log('Visiteurs uniques:', d.value))
-        .catch(()=>{});
-    }
+    // 🔍 Compteur invisible via hits.sh (aucun compte requis)
+    // Remplace HITS_PATH_ICI par l'URL/chemin public qui sert ta page (sans le https://)
+    // Exemples:
+    // - "davidlagon.github.io/Equinox-Reborn/"
+    // - "tondomaine.fr/equinox/"
+    const HITS_PATH = "HITS_PATH_ICI";
+    const img = document.createElement('img');
+    img.src = `https://hits.sh/${encodeURIComponent(HITS_PATH)}.svg?style=flat-square`;
+    img.alt = "";
+    img.referrerPolicy = "no-referrer";
+    // on le rend invisible
+    img.style.position = "absolute";
+    img.style.width = "1px";
+    img.style.height = "1px";
+    img.style.opacity = "0";
+    img.style.pointerEvents = "none";
+    document.body.appendChild(img);
   </script>
 </body>
 </html>
