--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
             <div class="dj">INGLER <span class="badge">(Laurent Hô)</span></div>
             <div class="dj">LA PESTE</div>
             <div class="dj">LE TALIUM</div>
+            <div class="dj">CED REC</div>
             <div class="dj">KDX</div>
             <div class="dj">DAVID LAGON</div>
           </div>
