--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     const REVEAL_DAYS_BEFORE = 6;   // J-6
     const REVEAL_HOUR_LOCAL  = 18;  // 18:00
     // === MODE TEST : révéler le lieu dès maintenant ===
-    const FORCE_REVEAL = true;
+    const FORCE_REVEAL = false;
 
     const startedText = "C'est parti !";
     const pad = n => String(n).padStart(2, "0");
