--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>Equinox Reborn — Compte à rebours</title>
   <meta name="description" content="Compte à rebours avant la soirée Equinox Reborn" />
   <style>
+    .location a { color:#66b3ff; text-decoration:underline; }
+    .location a:hover { text-decoration:none; }
+
     :root{
       --bg:#0a0a0a; --fg:#fff; --glass:rgba(0,0,0,.55);
       --accent:#e6e6e6; --radius:16px; --gap:clamp(12px, 4vw, 24px);
